# Fromia

./: .gitignore  Makefile  devenv  install.sh  int.sh  readme.txt  requirements.txt
FromiaStep/: main.m
ccsh/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  main.c
ccsh/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
clibs/: Foundation.h  GFilesystem.h  fromia.h  posix.h
fromia-base/: FWorkspace.pyx  Makefile
fromia-base/Resources/: NSConfig.conf
fromia-gui/: Makefile  configure  main.cxx
fromia-gui/FileBrowser/: main.c
fromia-gui/GEditor/: main.c
fromia-gui/GTerm/: main.cpp
fromia-make/: Makefile  main.cpp
libs-base/: GClasses.h  fromia.h
runtime/: FWorkspace.c  FWorkspace.pyx  Makefile  main.cpp  main.py  setup.py  test.cr
runtime/Resources/: Info.conf
systools/: boot.sh
systools/nmake/: Makefile  linker.c  maker.sh
