AC_INIT([ccsh], [0.1], [stumbledeveloper@hotmail.com])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE([foreign])

# Check for a C compiler
AC_PROG_CC

# Check for required headers
AC_CHECK_HEADERS([stdlib.h stdio.h fromia.h Fundation.h])

# Generate config.h for preprocessor macros
AC_CONFIG_HEADERS([config.h])

# Create Makefile
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
